Chess Club/src/objects/Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Receipt</label>
    <nameField>
        <displayFormat>RT-{0}</displayFormat>
        <label>Receipt#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>